--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'English literature -- 19th century'
 - !lcc 'PR'
+- GITenberg
 tableOfContents: Memories and portraits -- Memoir of Fleeming Jenkin.
 title: The Works of Robert Louis Stevenson - Swanston Edition, Vol. 9
 url: http://www.gutenberg.org/ebooks/30598
